--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,14 @@
+#MySql Configuration
+#spring.datasource.url=jdbc:mysql://localhost:3306/job_portal
+#spring.datasource.username=root
+#spring.datasource.password=nilesh
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#For Mysql Online Database
+spring.datasource.url=jdbc:mysql://avnadmin:AVNS_OJhOfogfclGmg5doyRT@mysql-1177da67-ndmorkar-ae98.a.aivencloud.com:23956/job_portal?ssl-mode=REQUIRED
+spring.datasource.username=avnadmin
+spring.datasource.password=AVNS_OJhOfogfclGmg5doyRT
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #For Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
