--- a/DockerFile
+++ b/DockerFile
@@ -3,6 +3,6 @@ COPY . .
 RUN mvn clean package -DskipTests
 
 FROM openjdk:17.0.1-jdk-slim
-COPY --from=build /target/JobPortal-0.0.1-SNAPSHOT.jar demo.jar
+COPY --from=build /target/JobPortal-0.0.1-SNAPSHOT.jar JobPortal.jar
 EXPOSE 8080
 ENTRYPOINT ["java","-jar","JobPortal.jar"]
