--- a/DockerFile
+++ b/DockerFile
@@ -1,8 +1,15 @@
-FROM maven:3.8.5-openjdk-17 AS build
-COPY . .
-RUN mvn clean package -DskipTests
+FROM ubuntu:latest AS build
 
-FROM openjdk:17.0.1-jdk-slim
-COPY --from=build /target/JobPortal-0.0.1-SNAPSHOT.jar JobPortal.jar
+RUN apt-get update
+RUN apt-get install openjdk-17-jdk -y
+COPY . .
+
+RUN ./gradlew bootJar --no-daemon
+
+FROM openjdk:17-jdk-slim
+
 EXPOSE 8080
-ENTRYPOINT ["java","-jar","JobPortal.jar"]
+
+COPY --from=build /build/libs/JobPortal-1.jar app.jar
+
+ENTRYPOINT ["java", "-jar", "app.jar"]
