--- a/DockerFile
+++ b/DockerFile
@@ -1,15 +1,48 @@
-FROM ubuntu:latest AS build
+# FROM ubuntu:latest AS build
+#
+# RUN apt-get update
+# RUN apt-get install openjdk-17-jdk -y
+# COPY . .
+#
+# RUN ./gradlew bootJar --no-daemon
+#
+# FROM openjdk:17-jdk-slim
+#
+# EXPOSE 8080
+#
+# COPY --from=build /build/libs/JobPortal-1.jar app.jar
+#
+# ENTRYPOINT ["java", "-jar", "app.jar"]
 
-RUN apt-get update
-RUN apt-get install openjdk-17-jdk -y
+# Use an appropriate base image with JDK and other dependencies
+FROM openjdk:17-jdk AS build
+
+# Set the working directory in the container
+WORKDIR /app
+
+# Copy the Gradle wrapper and other necessary files
+COPY gradlew .
+COPY gradle ./gradle
+COPY build.gradle .
+COPY settings.gradle .
+
+# Copy the entire project
 COPY . .
 
+# Run the Gradle build
 RUN ./gradlew bootJar --no-daemon
 
+# Use a lightweight base image for the final image
 FROM openjdk:17-jdk-slim
 
+# Set the working directory in the container
+WORKDIR /app
+
+# Expose the port on which the Spring Boot application will run
 EXPOSE 8080
 
-COPY --from=build /build/libs/JobPortal-1.jar app.jar
+# Copy the built JAR file from the build stage to the final image
+COPY --from=build /app/build/libs/*.jar app.jar
 
+# Specify the command to run your Spring Boot application
 ENTRYPOINT ["java", "-jar", "app.jar"]
